@@ -1,3 +1,4 @@
+	* expose UPnP and NAT-PMP mapping in session object
 	* DHT refactoring and support for storing arbitrary data with put
 	* support building on android
 	* improved support for web seeds that don't support keep-alive
